<resources>
    <string name="app_name">BatiBook</string>
    <string name="library">Library</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hamburger">Menu</string>
    <string name="light_gray">Light Gray</string>
    <string name="batibook_banner">BatiBook Banner</string>
    <string name="filter_icon">Filter Icon</string>
    <string name="settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="app_language">App Language</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="log_out">Log Out</string>
    <string name="about_batibook">About BatiBook</string>
    <string name="bottom_sheet_menu">Bottom Sheet Menu</string>
    <string name="about_us">About Us</string>
    <string name="about_info">BatiBook is an interactive reading platform designed to make learning fun and engaging for children. It offers a wide collection of illustrated stories and educational activities to spark creativity and curiosity in young readers.</string>
    <string name="app_ver">App Version 1.0.0</string>
    <string name="batibook_info">What is Batibook?</string>
    <string name="our_mission">Our Mission</string>
    <string name="our_mission_text">To inspire young readers by offering accessible, engaging, and culturally rich Filipino stories.</string>
    <string name="our_vision">Our Vision</string>
    <string name="our_vision_text">To cultivate a generation of curious learners through stories that connect language, culture, and imagination.</string>
    <string name="contact_us">Contact Us</string>
    <string name="contact_info">📧 support@batibook.ph\n🌐 www.batibook.ph</string>
    <string name="search">Search</string>
    <string name="search_icon">Search Icon</string>
    <string name="books">Books</string>
    <string name="favorites">Favorites</string>
    <string name="downloads">Downloads</string>
    <string name="featured_stories">Featured Stories</string>
    <string name="recommended_for_you">Recommended For You</string>
    <string name="see_more">See More</string>
    <string name="categories">Categories</string>
    <string name="book_cover">Book Cover</string>
    <string name="category_icon">Category Icon</string>
    <string name="batibook_logo">BatiBook Logo</string>
    <string name="about_batibook_description">BatiBook is an interactive reading platform designed to make learning fun and engaging for children. It offers a wide collection of illustrated stories and educational activities to spark creativity and curiosity in young readers.</string>
    <string name="version_info">Version 1.0.0</string>
    <string name="dog_and_cat">Dog and Cat</string>
    <string name="ana_and_the_ball">Ana and the Ball</string>
    <string name="lito_s_umbrella">Lito\'s Umbrella</string>
    <string name="mila_and_the_butterfly">Mila and the Butterfly</string>
    <string name="toto_and_his_friends_in_forest">Toto and His Friends in Forest</string>
    <string name="bituin_and_the_little_fish">Bituin and the Little Fish</string>
    <string name="folktales">Folktales</string>
    <string name="legends_and_myths">Legends and Myths</string>
    <string name="animal_tales">Animal Tales</string>
    <string name="nature_and_environment">Nature and Environment</string>
    <string name="family_and_friends">Family and Friends</string>
    <string name="fantasy_and_adventure">Fantasy and Adventure</string>
    <string name="values_and_morals">Values and Morals</string>
    <string name="heroes_and_inspirations">Heroes and Inspirations</string>
    <string name="everyday_stories">Everyday Stories</string>
    <string name="download_books">Download Books</string>
    <string name="filter">Filter</string>
    <string name="clear">Clear</string>
    <string name="show_books">Show Books</string>
    <string name="reading_level">Reading Level</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="batibook_reader">User Name</string>
    <string name="gmail">User Gmail</string>
    <string name="reading_statistics">Reading Statistics</string>
    <string name="_12">12</string>
    <string name="books_read">Books Read</string>
    <string name="_8">8</string>
    <string name="_5">5</string>
    <string name="english">English</string>
    <string name="notifications">Notifications</string>
    <string name="account">Account</string>
    <string name="recently_viewed">Recently Viewed</string>
    <string name="subscribe">Subscription</string>
    <string name="help_center">Help Center</string>
    <string name="author">Dabarkads</string>
    <string name="listen">Listen</string>
    <string name="read">Read</string>
    <string name="download">Download</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="select_language">Select Language</string>
    <string name="dark_mode_enabled">Dark mode enabled</string>
    <string name="dark_mode_disabled">Dark mode disabled</string>
    <string name="language_changed">Language changed to %1$s</string>
    <string name="notifications_enabled">Notifications enabled</string>
    <string name="notifications_disabled">Notifications disabled</string>
    <string name="filipino">Filipino</string>
</resources>