<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_columnWeight="1"
    android:layout_margin="8dp"
    android:gravity="center_horizontal">

    <ImageView
        android:id="@+id/book_image"
        android:layout_width="130dp"
        android:layout_height="200dp"
        android:contentDescription="@string/book_cover"
        android:src="@drawable/book1"
        android:scaleType="centerCrop"
        tools:ignore="ImageContrastCheck" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="4dp"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:id="@+id/book_title"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/dog_and_cat"
            android:fontFamily="@font/poppins_medium"
            android:includeFontPadding="false"
            android:textColor="#000"
            android:textSize="14sp"
            android:maxLines="2"
            android:ellipsize="end"
            android:textAlignment="center" />

        <ImageView
            android:id="@+id/book_status_icon"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginStart="4dp"
            android:src="@drawable/download2"
            android:contentDescription="@string/download_books"
            app:tint="#000" />
    </LinearLayout>
</LinearLayout>
