<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp"
        android:gravity="center_vertical"
        android:layout_marginTop="20dp"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:fontFamily="@font/poppins_bold"
            android:includeFontPadding="false"
            android:textColor="#000000"
            android:layout_marginStart="0dp"
            android:textSize="25sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/cancel"
            android:background="@drawable/item_press_effect"
            android:src="@drawable/close"
            android:id="@+id/cancelButton"
            android:textColor="#7AB385"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutLanguage"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="12dp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/app_language"
            android:src="@drawable/language"/>

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginBottom="0dp"
            android:backgroundTint="@color/black"
            android:minHeight="48dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutDarkMode"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/dark_mode"
            android:src="@drawable/dark_mode"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dark_mode"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_bold"
            android:includeFontPadding="false"
            android:layout_marginStart="20dp"
            android:textSize="16sp"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Switch
            android:id="@+id/switcher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:thumbTint="#000000"
            android:trackTint="#000000"
            android:minWidth="48dp"
            android:minHeight="48dp"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutLogOut"
        android:layout_width="match_parent"
        android:layout_height="73dp"
        android:orientation="horizontal"
        android:padding="12dp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/log_out"
            android:src="@drawable/logout" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/poppins_bold"
            android:includeFontPadding="false"
            android:text="@string/log_out"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutAppInfo"
        android:layout_width="match_parent"
        android:layout_height="73dp"
        android:orientation="horizontal"
        android:padding="12dp"
        android:background="@drawable/item_press_effect"
        android:clickable="true"
        android:focusable="true"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="23dp"
            android:layout_gravity="center"
            android:contentDescription="@string/about_batibook"
            android:src="@drawable/batibook_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/about_batibook"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_bold"
            android:includeFontPadding="false"
            android:layout_marginStart="20dp"
            android:textSize="16sp"/>

    </LinearLayout>

</LinearLayout>