<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/libraryScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".Library">

    <LinearLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        android:gravity="center_vertical"
        android:background="#FFFFFF">

    <TextView
            android:id="@+id/tvLibrary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/poppins_bold"
            android:includeFontPadding="false"
            android:text="@string/library"
            android:layout_marginStart="8dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#000000" />

        <ImageView
            android:id="@+id/ivSearch"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/search"
            android:contentDescription="@string/search" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/filter_bar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/topBar"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="2dp"
        app:cardBackgroundColor="#FDFDFC"
        app:cardCornerRadius="30dp"
        app:cardElevation="4dp"
        app:strokeColor="#E3AC6C"
        app:strokeWidth="2dp"
        tools:ignore="VisualLintBounds">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:weightSum="3"
            android:paddingHorizontal="12dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/btn_books"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                app:cardCornerRadius="24dp"
                app:cardBackgroundColor="#E3AC6C"
                app:cardElevation="0dp"
                android:layout_gravity="center">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:src="@drawable/library"
                    android:contentDescription="@string/books"
                    app:tint="#000000" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/btn_favorites"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                app:cardCornerRadius="24dp"
                app:cardBackgroundColor="#FDFDFC"
                app:cardElevation="0dp"
                android:layout_gravity="center">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:src="@drawable/heart"
                    android:contentDescription="@string/favorites"
                    app:tint="#000000" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/btn_downloads"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                app:cardCornerRadius="24dp"
                app:cardBackgroundColor="#FDFDFC"
                app:cardElevation="0dp"
                android:layout_gravity="center">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:src="@drawable/download"
                    android:contentDescription="@string/downloads"
                    app:tint="#000000" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_below="@id/filter_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <GridLayout
                android:id="@+id/bookGrid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:gravity="center_horizontal"
                tools:ignore="UselessParent">

            </GridLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>